<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.UsersActivity">

  <item
    android:id="@+id/action_settings"
    android:title="@string/settings"
    android:icon="@drawable/ic_settings_white_24dp"
    android:orderInCategory="100"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/action_about"
    android:title="@string/settings"
    android:icon="@drawable/ic_info_white_24dp"
    android:orderInCategory="100"
    app:showAsAction="ifRoom" />
</menu>
