<resources>
  <string name="about_app_name">Github Client App</string>
  <string name="about_app_description">Experimental architecture app with example usage intended to be a showcase, test and skeleton app.</string>
  <string name="about_app_developer">by Josef Raska</string>

  <string name="about_github_description">Go to GitHub page</string>
  <string name="about_web_description">Go to Website</string>
  <string name="about_medium_description">Go to Medium</string>
  <string name="about_twitter_description">Go to Twitter</string>
</resources>
